happi-maintenance-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: happi-api
  namespace: happimaintenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: happi-api
  template:
    metadata:
      labels:
        app: happi-api
    spec:
      containers:
        - name: happi-api
          image: happiregistry2025.azurecr.io/happi-api:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "1m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
