happi-maintenance-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: happi-api-svc
  namespace: happimaintenance
spec:
  selector:
    app: happi-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
