happi-maintenance-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: happi-api-ingress
  namespace: happimaintenance
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: api.20.99.183.136.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: happi-api-svc
                port:
                  number: 80
